Update and rename DRAFT-statement-20240510-01.md to statement-20240510-01.md
added proposal , removed DRAFT

--- a/departments/development/statements/proposal_349/statement-20240510-01.md
+++ b/departments/development/statements/proposal_349/statement-20240510-01.md
@@ -23,8 +23,7 @@ The Development Department invites Juno Commonwealth proposal authors to engage 
 
 ##### Reference:
 
-* Development Department Proposal Affirming Statement: PLACEHOLDER: To be Filed
-
+* Development Department Proposal Affirming Statement: [Proposal A27](https://daodao.zone/dao/juno1gyjl26rnqqyk6cuh6nqtvx8t885jgqagusvpqpvtgaygcjg2wjdqz0rzle/proposals/A27)
 * [Github: Statement Source](https://github.com/CosmosContracts/council/blob/main/departments/development/statements/proposal_349/DRAFT-statement-20240510-01.md)
 
 * [Juno Network Proposal #349](https://www.mintscan.io/juno/proposals/349)
